Added RewriteBase commented in .htaccess

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,6 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    #RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ app.php [QSA,L]
 </IfModule>
