Configuring parameters.ini

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -1,15 +1,13 @@
 [parameters]
-    database_driver=pdo_mysql
-    database_host=localhost
-    database_name=symfony
-    database_user=root
-    database_password=
+    database_driver="pdo_mysql"
+    database_host="localhost"
+    database_name="epagos"
+    database_user="root"
+    database_password="tangos"
+    mailer_transport="smtp"
+    mailer_host="localhost"
+    mailer_user=""
+    mailer_password=""
+    locale="en"
+    csrf_secret="c11b8a11044622e445d10646ffcf22904"
 
-    mailer_transport=smtp
-    mailer_host=localhost
-    mailer_user=
-    mailer_password=
-
-    locale=en
-
-    csrf_secret=xxxxxxxxxx
