Update the JMSSecurityExtraBundle configuration and version

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -54,6 +54,4 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
 
-jms_security_extra:
-    secure_controllers:  true
-    secure_all_services: false
+jms_security_extra: ~
