--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,3 +1,7 @@
+jms_security_extra:
+    secure_all_services: false
+    expressions: true
+
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
@@ -35,5 +39,5 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+        #- { path: ^/login, access: "isAnonymous()", requires_channel: https }
+        #- { path: ^/_internal, access: "permitAll", ip: 127.0.0.1 }
