tweaked security.yml

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,6 @@
 jms_security_extra:
     secure_all_services: false
-    expressions: true
+    expressions:         true
 
 security:
     encoders:
@@ -8,14 +8,14 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_SUPER_ADMIN: [ ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
 
     providers:
         in_memory:
             memory:
                 users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+                    user:  { password: userPass,  roles: [ ROLE_USER  ] }
+                    admin: { password: adminPass, roles: [ ROLE_ADMIN ] }
 
     firewalls:
         dev:
