--- a/vagrant/puppet/modules/default/templates/main-vhost.conf
+++ b/vagrant/puppet/modules/default/templates/main-vhost.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
 
-    ServerAdmin admin@liip.ch
+    ServerAdmin admin@example.org
     DocumentRoot /vagrant/web
     ErrorLog /var/log/apache2/symfony-error_log
-    CustomLog /var/log/apache2/symfony-access_log combined env=!spammer
+    CustomLog /var/log/apache2/symfony-access_log combined
     RewriteEngine On
 
 </VirtualHost>
