--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,7 +14,7 @@ framework:
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
-    trust_proxy_headers: false # Whether or not the Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
+    #trusted_proxies: [127.0.0.1] # An array of trusted proxy IPs (if any)
     session:         ~
 
 # Twig Configuration
