Fixed missing default trusted_proxies causing show-stopping bug

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,7 @@ framework:
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  %locale%
     trust_proxy_headers: false # Whether or not the Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
+    trusted_proxies: ~
     session:         ~
 
 # Twig Configuration
