--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,6 +16,8 @@ framework:
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:         ~
+    # Uncomment to handle HTTP content rederering strategies like ESI
+    #router_proxy:    { path: /_proxy }
 
 # Twig Configuration
 twig:
