--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
   - 5.3
   - 5.4
 
-before_script: composer install
+before_script: 
+  - composer self-update
+  - composer install
 
 script: phpunit -c app
