--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
 
 framework:
     #esi:             ~
+    #fragments:       true
     #translator:      { fallback: %locale% }
     secret:          %secret%
     router:
@@ -16,7 +17,6 @@ framework:
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:         ~
-    #router_proxy:   { path: /_proxy }
 
 # Twig Configuration
 twig:
