sets strict_requirements to ~ on production for faster url generation
strict_requirements = null on production
strict_requirements overriding null on production
overriding strict requirements null from main configuration
moving it up to config.yml
switching null to ~ as per @WouterJ
commenting the whole lines of framework key
quoting the value as per @WouterJ
quoting the value for strict_requirements key

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -5,11 +5,9 @@ imports:
 # always pass the requirements. Otherwise it would break your link (or even site with
 # strict_requirements = true). So we can disable the requirements check completely for
 # enhanced performance with strict_requirements = null.
-framework:
-    router:
-        strict_requirements: null
-    #validation:
-    #    cache: apc
+#framework:
+#    validation:
+#        cache: apc
 
 #doctrine:
 #    orm:
