--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -4,7 +4,7 @@ imports:
 framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
-        strict_requirements: "%kernel.debug%"
+        strict_requirements: true
     profiler: { only_exceptions: false }
 
 web_profiler:
