Removed app/app_dev.php, now uses parameters
See web/app.php for details

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,8 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    environment: dev
+    http_cache: false
+    localhost_only_dev: true
+    apc_cache_id: false
