Removed app/app_dev.php, now uses parameters
See web/app.php for details

Changed app/console to use the environment parameter by default

added script to composer.json to force generation of app/cache/app.php

Added web/app_<env>.php, using the generic web/app.php

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,9 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    environment: dev
+    umask_fix: false
+    http_cache: false
+    localhost_only_dev: true
+    apc_cache_id: false
