--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,6 +17,7 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_proxies: ~
+    trusted_hosts: ~
     session:         ~
     fragments:       ~
     http_method_override: true
