--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~2.3",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+
+        "stack/builder": "~1.0",
+        "stack/url-map": "~1.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
