parameterize assetic's use_controller
devs can disable assetic controller in dev if they prefer
assetic:dump --watch

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -30,7 +30,7 @@ monolog:
         #    level:  info
 
 assetic:
-    use_controller: true
+    use_controller: %use_assetic_controller%
 
 #swiftmailer:
 #    delivery_address: me@example.com
