--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,5 +14,6 @@ parameters:
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    debug_toolbar:     true
-    debug_redirects:   false
+    debug_toolbar:          true
+    debug_redirects:        false
+    use_assetic_controller: true
