Remove trailing slash from the end of the URL with a redirect 301

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -7,6 +7,8 @@ DirectoryIndex app.php
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    
+    RewriteRule ^(.*)/$ /$1 [L,R=301]
 
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
