--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,21 @@
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~2.3",
-        "sensio/framework-extra-bundle": "~2.3",
+        "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "exercise/htmlpurifier-bundle": "1.0.*@dev",
+        "trsteel/ckeditor-bundle": "1.3.*@dev",
+        "helios-ag/fm-elfinder-bundle": "dev-master",
+        "braincrafted/bootstrap-bundle": "~2.0",
+        "knplabs/knp-menu": "2.0.*@dev",
+        "knplabs/knp-menu-bundle": "2.0.*@dev",
+        "twbs/bootstrap": "3.0.*",
+        "components/jquery":  "1.10.*",
+        "avalanche123/imagine-bundle": "v2.1",
+        "friendsofsymfony/elastica-bundle": "3.0.*@dev",
+        "friendsofsymfony/comment-bundle": "2.0.*@dev",
+        "sandello-alkr/cmsbundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
