--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,7 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+    
+    address: 'Брест, Советская, 67'
+    baloon: 'Офис'
+    baloon_text: 'Офис в центре города'
