добавил кастомные страницы ошибок

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+exceptions:
+    resource: "@ExceptionsBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 elfinder:
      resource: "@FMElfinderBundle/Resources/config/routing.yml"
 
