--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "description": "space pencil base",
     "autoload": {
-        "psr-0": { "sandello-alkr\\symfony": "" }
+        "psr-0": { "": "src/" }
     },
     "require": {
         "php": ">=5.3.3",
