--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,30 @@
 {
-    "name": "symfony/framework-standard-edition",
+    "name": "symfony-cmf/standard-edition",
     "license": "MIT",
     "type": "project",
-    "description": "The \"Symfony Standard Edition\" distribution",
+    "description": "The \"Symfony CMF Standard Edition\" distribution",
     "autoload": {
         "psr-0": { "": "src/" }
     },
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
+        "jackalope/jackalope-doctrine-dbal": "1.1.*",
         "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/data-fixtures": "1.0.*",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
+        "symfony-cmf/symfony-cmf": "1.1.*",
+        "symfony-cmf/simple-cms-bundle": "1.1.*",
+        "symfony-cmf/create-bundle": "1.1.*",
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0"
     },
+    "minimum-stability": "dev",
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
