--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "nelmio/alice": "1.*"
     },
     "minimum-stability": "dev",
     "scripts": {
