добавил фикс кодировки для прода

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,6 +77,8 @@ doctrine:
         user:     %database_user%
         password: %database_password%
         charset:  UTF8
+        options:
+            1002: "SET NAMES utf8"
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: %kernel.root_dir%/data/data.db3
         # path:     %database_path%
