добавил ветку в composer

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "avalanche123/imagine-bundle": "v2.1",
         "friendsofsymfony/elastica-bundle": "3.0.*@dev",
         "friendsofsymfony/comment-bundle": "2.0.*@dev",
-        "sandello-alkr/cmsbundle": "dev-master"
+        "sandello-alkr/cmsbundle": "1.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
@@ -72,7 +72,7 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "2.4-dev"
+            "dev-master": "1.0"
         }
     }
 }
