добавил бандлы для переводов в composer

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,11 @@
         "avalanche123/imagine-bundle": "v2.1",
         "friendsofsymfony/elastica-bundle": "3.0.*@dev",
         "friendsofsymfony/comment-bundle": "2.0.*@dev",
-        "sandello-alkr/cmsbundle": "1.0.*@dev"
+        "sandello-alkr/cmsbundle": "1.0.*@dev",
+        "jms/i18n-routing-bundle": "dev-master",
+        "jms/di-extra-bundle": "1.4.*@dev",
+        "stof/doctrine-extensions-bundle": "1.1.*@dev",
+        "a2lix/translation-form-bundle": "1.*@dev",
     },
     "scripts": {
         "post-install-cmd": [
