--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "jms/i18n-routing-bundle": "dev-master",
         "jms/di-extra-bundle": "1.4.*@dev",
         "stof/doctrine-extensions-bundle": "1.1.*@dev",
-        "a2lix/translation-form-bundle": "1.*@dev",
+        "a2lix/translation-form-bundle": "1.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
